# git_projects

LiliCode/: CMakeLists.txt  entrinsics.yml  intrinsics.yml  stereo_match.cpp  stereo_match.cpp~
LiliCode/stereo_parameters_ACAT/: entrinsics.yml
lidar_stereo/src/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  cvconfig.h  lidar_stereo.cpp  lidar_stereo.h  precomp.hpp
lidar_stereo_SGBM/src/: CMakeLists.txt  lidar_stereo_SGBM.cpp  lidar_stereo_SGBM.h
pass_filter/src/: CMakeLists.txt  CMakeLists.txt~  pass_filter.cpp
safe_node/src/: CMakeLists.txt  safe_node (copy).cpp  safe_node.cpp  safe_node.h  safe_node_WORKINGCOPY_02.08.2016.cpp  stereobm_sds.cpp  stereosgbm_sds.cpp
statistics_tests/src/: CMakeLists.txt  CMakeLists.txt~  pass_filter.cpp~  statistics_tests.cpp
stereo_BM/src/: CMakeLists.txt  CMakeLists.txt~  stereo_BM.cpp
stereo_SGBM/src/: CMakeLists.txt  stereo_SGBM.cpp
